data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/Data_Cloud_Notification_Feature__mdt.object-meta.xml
<CustomObject>
    <label>Data Cloud Notification Feature</label>
    <pluralLabel>Data Cloud Notification Features</pluralLabel>
</CustomObject>