data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/fields/Data_Cloud_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Record_Name__c</fullName>
    <inlineHelpText>Set this to the name of the record that these settings apply to. The name must be valid configuration for the type set.</inlineHelpText>
    <label>Data Cloud Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>