data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/fields/Data_Cloud_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Type__c</fullName>
    <inlineHelpText>Set this field to a Data Cloud configuration type e.g. Data Stream or Calculated Insights</inlineHelpText>
    <label>Data Cloud Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Stream</fullName>
                <default>true</default>
                <label>Data Stream</label>
            </value>
            <value>
                <fullName>Data Transform</fullName>
            </value>
            <value>
                <fullName>Identity Resolution</fullName>
            </value>
            <value>
                <fullName>Calculated Insight</fullName>
            </value>
            <value>
                <fullName>Segment</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>