data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/fields/Enable_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Enable_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Notifications</label>
    <type>Checkbox</type>
</CustomField>