data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/fields/Notification_Body__c.field-meta.xml
<CustomField>
    <fullName>Notification_Body__c</fullName>
    <defaultValue>&quot;There was a problem with the configuration in Data Cloud. Please review it and investigate any issues.&quot;</defaultValue>
    <inlineHelpText>Set the text that will be sent to the user upon receiving this notification and displayed as the body in the notification bell in Salesforce.</inlineHelpText>
    <label>Notification Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>