data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/fields/Notification_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Notification_Frequency__c</fullName>
    <inlineHelpText>Get notifications for the first failure of a given day, or for all failures regardless of whether somebody has already been received for that day.</inlineHelpText>
    <label>Notification Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Error</fullName>
                <default>true</default>
                <label>First Error</label>
            </value>
            <value>
                <fullName>All Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>