data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/fields/Notification_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Notification_Template_Name__c</fullName>
    <label>Notification Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>