data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/fields/Notification_Title__c.field-meta.xml
<CustomField>
    <fullName>Notification_Title__c</fullName>
    <inlineHelpText>Set the text that will be sent to the user upon receiving this notification and displayed as the title in the notification bell in Salesforce.</inlineHelpText>
    <label>Notification Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>