data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/fields/Permission_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Name__c</fullName>
    <inlineHelpText>Enter a Permission Set&apos;s API Name that a user must have to receive notifications. By default, use GenieAdmin which is the API name of the out of the box &quot;Data Cloud Admin&apos; Permission Set which will be assigned to all Data Cloud admins who can investigate any notifications.</inlineHelpText>
    <label>Permission Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>