data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/validationRules/Enforce_Template_Name_if_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Template_Name_if_Email</fullName>
    <active>true</active>
    <description>Force the user to specify an email template name if they are using Email.</description>
    <errorConditionFormula>AND(ISPICKVAL(Notification_Type__c, &quot;Email&quot;), ISBLANK(Notification_Template_Name__c))</errorConditionFormula>
    <errorDisplayField>Notification_Template_Name__c</errorDisplayField>
    <errorMessage>Please specify an email template when using the Email notification type.</errorMessage>
</ValidationRule>