data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/validationRules/Enforce_Title_and_Body.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Title_and_Body</fullName>
    <active>true</active>
    <description>Enforce the Notification Title and Notification Body to be populated if the Notification Type is set to Notification Bell.</description>
    <errorConditionFormula>AND(ISPICKVAL(Notification_Type__c, &quot;Notification Bell&quot;), OR(
ISBLANK(Notification_Body__c),  ISBLANK(Notification_Title__c)))</errorConditionFormula>
    <errorMessage>The Notification Title and Notification Body must be populated if the Notification Type is set to Notification Bell.</errorMessage>
</ValidationRule>