data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/listViews/All_Configuration.listView-meta.xml
<ListView>
    <fullName>All_Configuration</fullName>
    <columns>Data_Cloud_Record_Name__c</columns>
    <columns>Data_Cloud_Type__c</columns>
    <columns>Notification_Type__c</columns>
    <columns>Notification_Frequency__c</columns>
    <columns>Permission_Set_Name__c</columns>
    <columns>Notification_Title__c</columns>
    <columns>Notification_Body__c</columns>
    <columns>Notification_Template_Name__c</columns>
    <columns>Enable_Notifications__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Configuration</label>
</ListView>