data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/listViews/Calculated_Insights.listView-meta.xml
<ListView>
    <fullName>Calculated_Insights</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Data_Cloud_Record_Name__c</columns>
    <columns>Enable_Notifications__c</columns>
    <columns>Notification_Body__c</columns>
    <columns>Notification_Frequency__c</columns>
    <columns>Notification_Title__c</columns>
    <columns>Notification_Type__c</columns>
    <columns>Permission_Set_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Calculated Insights</label>
    <language>en_US</language>
</ListView>