data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Notification_Feature__mdt/listViews/Data_Stream.listView-meta.xml
<ListView>
    <fullName>Data_Stream</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>Data Stream</label>
    <language>en_US</language>
</ListView>